[package]
name = "copythat-core"
description = "Async byte-exact file copy engine for Copy That v1.0.0."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
# Gate the 1 GiB + disk-full tests behind an opt-in feature so normal
# `cargo test --workspace` runs in seconds.
slow-tests = []

[dependencies]
# Phase 19a — streaming BLAKE3 of file contents during on-disk scan.
# Same crate `copythat-hash` re-exports, pulled in directly so the
# scan module can run without routing through the hash crate's
# `Hasher` trait indirection.
blake3 = "1"
# Phase 19a — per-job scan DB lives under the OS user-config dir.
directories = "6"
filetime = "0.2"
# Phase 14a — compiled glob sets for include/exclude filters applied
# at enumeration time. `globset` is what ripgrep uses; it compiles the
# patterns once and matches without per-path allocation.
globset = "0.4"
# Phase 19a — SQLite-backed scan database. Bundled so the Tauri
# bundle ships a single binary on every platform. `copythat-history`
# already carries the same version/features combo.
rusqlite = { version = "0.39", features = ["bundled"] }
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
# Phase 19a — per-scan UUID identifiers.
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
# Phase 30 — Unicode NFC/NFD normalization for cross-platform path
# translation (macOS HFS+ stores NFD; Windows + Linux expect NFC).
unicode-normalization = "0.1"
# Observability — replace bare `eprintln!` diagnostics with structured
# `tracing::warn!` / `info!` / `debug!` so embedders can install their
# own subscriber and route platform / tree warnings off stderr.
tracing = { version = "0.1", default-features = false, features = ["std"] }
# Phase 30 — canonicalize Windows paths without the `\\?\` UNC prefix.
# Tri-licensed CC0-1.0 / MIT-0 / Apache-2.0; Apache-2.0 satisfies our
# allowlist. The `\\?\` long-path prefix itself is applied manually in
# `translate::apply_long_path_prefix`; `dunce` is used to simplify
# already-prefixed inputs before our length gate fires.
dunce = "1"

[dev-dependencies]
# Phase 30 — smoke test exercises the TOML round-trip of
# `PathTranslationSettings`. Dev-only so the settings crate is still
# kept out of the engine's release graph.
copythat-settings = { path = "../copythat-settings", version = "1" }
criterion = { version = "0.7", features = ["html_reports"] }
rand = "0.9"
# Phase 19a — cross-platform RSS probe used by the scan smoke test to
# assert the 5 M-file scan stays below 200 MiB peak.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tempfile = "3"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "test-util",
    "time",
] }

# Per-phase smoke tests live under /tests/smoke at the workspace root
# so they're easy to find. Cargo needs an explicit [[test]] entry to
# pick up a source outside the crate directory.
[[test]]
name = "phase_01_core_copy"
path = "../../tests/smoke/phase_01_core_copy.rs"

[[test]]
name = "phase_02_tree_queue"
path = "../../tests/smoke/phase_02_tree_queue.rs"

# Phase 14a — enumeration-time filters (glob / size / date / attribute).
[[test]]
name = "phase_14a_filters"
path = "../../tests/smoke/phase_14a_filters.rs"

# Phase 17a — red-team check that copy_file / copy_tree / move_*
# reject `..` traversal at the engine boundary with a typed
# CopyErrorKind::PathEscape (i.e. the safety guard wired in
# `crates/copythat-core/src/safety.rs`).
[[test]]
name = "phase_17_security"
path = "../../tests/smoke/phase_17_security.rs"

# Phase 17b — supply-chain audit gate tripwire. Filesystem-only —
# asserts that the cargo-audit + cargo-vet CI jobs are still wired
# in `.github/workflows/ci.yml` and that the supply-chain/ directory
# carries the trust imports + audit feed config.
[[test]]
name = "phase_17b_supply_chain"
path = "../../tests/smoke/phase_17b_supply_chain.rs"

# Phase 17c — symlink-race / TOCTOU hardening. Asserts O_NOFOLLOW
# (Unix) / FILE_FLAG_OPEN_REPARSE_POINT (Windows) flag values, the
# `is_no_follow_rejection` classifier, the `is_within_root` jail
# helper, and (Unix only) the engine-level race regression.
[[test]]
name = "phase_17c_symlink_race"
path = "../../tests/smoke/phase_17c_symlink_race.rs"

# Phase 19a — disk-backed file enumeration (TeraCopy-style scan DB):
# streaming inserts, pause+resume round-trip, cursor-driven copy.
[[test]]
name = "phase_19a_scan_db"
path = "../../tests/smoke/phase_19a_scan_db.rs"

# Phase 30 — cross-platform path translation (NFC/NFD, reserved
# Windows names, `\\?\` long-path prefix, opt-in CRLF/LF rewrite).
[[test]]
name = "phase_30_translate"
path = "../../tests/smoke/phase_30_translate.rs"

# Phase 13 — Criterion benchmarks for the async copy engine.
# `cargo bench -p copythat-core --bench copy_bench` runs the full
# matrix (1 GiB single file, 10 k × 16 KiB many-small, mixed tree).
# The `xtask bench-ci` wrapper runs a scaled-down subset (~100 MiB
# instead of 1 GiB) so CI finishes in under 90 s and gates on
# regression vs the last committed baseline in `docs/BENCHMARKS.md`.
[[bench]]
name = "copy_bench"
harness = false
path = "benches/copy_bench.rs"
