[package]
name = "copythat-diag"
description = "Phase 47 — \"why is this slow?\" diagnostics: per-window throughput sampling, a bottleneck classifier (source-IO / dest-IO / network / antivirus / CPU / thermal), and annotated speed-graph dips with a cause emoji. Ships the stable analysis types + classifier + a DiagSink hook; the per-syscall engine instrumentation and UI speed-graph rendering are a follow-up increment."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Phase 47 — the public diagnostics types cross the Tauri IPC boundary as
# JSON (speed-graph annotations), so they derive serde. `serde` matches
# every other workspace member's single-version pin.
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Scaffold smoke round-trips the public types through JSON.
serde_json = "1"

# Phase 47 scaffold smoke lives at the workspace root (mirrors the
# convention set by the other phase smoke tests).
[[test]]
name = "phase_47_diag"
path = "../../tests/smoke/phase_47_diag.rs"
