[package]
name = "copythat-hash"
description = "Verification hashes (CRC32 / MD5 / SHA-1 / SHA-256 / SHA-512 / xxHash3 / BLAKE3) for Copy That v1.0.0."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
blake3 = "1"
copythat-core = { path = "../copythat-core", version = "1" }
crc32fast = "1"
digest = "0.10"
hex = "0.4"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
rand = "0.9"
tempfile = "3"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "test-util",
    "time",
] }

# Phase 3 smoke test lives at the workspace root.
[[test]]
name = "phase_03_verify"
path = "../../tests/smoke/phase_03_verify.rs"
