[package]
name = "copythat-i18n"
description = "Fluent (`.ftl`) loader and locale resolution for Copy That v1.0.0."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
