[package]
name = "copythat-mobile"
description = "Phase 37 — desktop-side mobile companion: PeerJS WebRTC peer-ID + SAS-emoji pairing protocol, push-notification dispatch (APNs ES256 + FCM RS256 JWT signers), persistent pairing records. The phone-side PWA lives in `apps/copythat-mobile/`; this crate is the desktop primitives the Tauri shell uses."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Phase 37 follow-up — mobile-settings persistence shape lives in
# copythat-settings (stringly typed); this crate's `settings_bridge`
# module maps between the persistence shape and the runtime
# `MobileSettings`.
copythat-settings = { path = "../copythat-settings", version = "1" }

# Phase 37 — X25519 ECDH for the SAS-emoji handshake. The shared
# secret is derived once at pairing time and persisted alongside the
# phone's long-term public key; subsequent control messages flow
# over the PeerJS data channel under DTLS, so no additional message-
# layer crypto is required. BSD-3-Clause.
x25519-dalek = { version = "2", default-features = false, features = [
    "static_secrets",
    "zeroize",
] }
# Phase 37 — SHA-256 for the SAS fingerprint + the optional QR-
# url integrity check. MIT/Apache-2.0.
sha2 = "0.10"
# Phase 38 follow-up — HMAC-SHA-256 for the per-session challenge-
# response that proves the phone holds the X25519 secret matching
# the public key on `Hello`. Without this, a peer that learns a
# paired pubkey could replay the unsigned `Hello` and drive
# privileged commands. MIT/Apache-2.0.
hmac = "0.12"
# Phase 37 — pairing tokens are base32 (Crockford alphabet) so the
# QR rendering stays in `[0-9A-Z]`. MIT/Apache-2.0.
base32 = "0.5"
# Phase 37 — QR encoder for the pairing payload + the PWA install
# QR. Pure Rust, MIT.
qrcodegen = "1"
# Phase 37 — secure random for SAS seeds + the desktop's stable
# Peer ID. MIT/Apache-2.0.
getrandom = "0.3"
# Phase 37 — push notifications HTTP client. Reuses the same
# rustls-only stack as copythat-cloud so we don't drag OpenSSL into
# the dep tree. MIT/Apache-2.0.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
# Phase 37 — `Identity` keypair zeroize on drop for any secret
# material. MIT/Apache-2.0.
zeroize = "1"
# Phase 37 follow-up — APNs (ES256) + FCM (RS256) JWT signers.
# MIT/Apache-2.0.
jsonwebtoken = "9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
# Phase 37 follow-up — `NotifyDispatcher::send` is async-trait.
# MIT/Apache-2.0.
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
toml = "0.9"
serde_json = "1"
# Phase 37 follow-up — generate test RSA key for the FCM signer
# round-trip. Already in the dep tree transitively through `age`
# (Phase 35).
rsa = { version = "0.9", default-features = false, features = ["std", "pem"] }
rand_core = "0.6"
# Phase 37 follow-up — generate ECDSA P-256 PEM key pairs for the
# APNs signer round-trip in the smoke test. `ring` provider keeps
# the build NASM-free on Windows (the `aws_lc_rs` provider rcgen
# defaults to needs nasm.exe on PATH for some sub-builds).
rcgen = { version = "0.14", default-features = false, features = [
    "ring",
    "pem",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "test-util",
    "io-util",
] }

[[test]]
name = "phase_37_mobile"
path = "../../tests/smoke/phase_37_mobile.rs"
