[package]
name = "copythat-mount"
description = "Phase 33 — mount Copy That's chunk store + history archive as a read-only filesystem (FUSE on Unix, WinFsp on Windows)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Phase 33a ships pure-Rust tree builder + handle types with no
# platform FFI. Phase 33b lights the real FUSE / WinFsp backends
# behind these feature flags so the default build stays lean and
# CI doesn't require kernel-side FUSE modules or the WinFsp
# installer image:
#
#   cargo build -p copythat-mount --features fuse    # Linux/macOS
#   cargo build -p copythat-mount --features winfsp  # Windows
#
# Neither backend is wired up in 33a — the features exist so the
# consumer crates and smoke test can hint at the upgrade path.
default = []
fuse = []
winfsp = []

[dependencies]
# History + chunk-store references feed the virtual tree. The mount
# crate consumes read-only — it never opens the DBs itself, the Tauri
# runner passes live handles in.
copythat-history = { path = "../copythat-history", version = "1" }
copythat-chunk = { path = "../copythat-chunk", version = "1" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Path sanitisation on mount roots reuses the same traversal guard
# the engine's `safety::validate_path_no_traversal` enforces.
copythat-core = { path = "../copythat-core", version = "1" }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "phase_33_mount"
path = "../../tests/smoke/phase_33_mount.rs"
