[package]
name = "copythat-mount"
description = "Phase 33 — mount Copy That's chunk store + history archive as a read-only filesystem (FUSE on Unix, WinFsp on Windows)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Phase 33a shipped pure-Rust tree builder + handle types with no
# platform FFI. Phase 33c/f lit the feature-gated backends:
#
#   cargo build -p copythat-mount --features fuse    # Linux/macOS
#   cargo build -p copythat-mount --features winfsp  # Windows
#
# - `fuse` pulls `fuser` 0.15 (MIT) on Unix; no-op elsewhere.
# - `winfsp` pulls `winfsp_wrs` 0.4 (MIT — Scille/Parsec's wrapper)
#   on Windows; no-op elsewhere. This replaces the initial
#   `winfsp-sys` candidate, which is GPL-3.0 and violates the
#   workspace's permissive-only `deny.toml` allowlist. `winfsp_wrs`
#   re-implements the FFI surface under MIT so Copy That stays
#   commercially shippable.
#
# The `winfsp` feature also requires the WinFsp driver installed
# on the host at runtime (https://winfsp.dev/). Phase 33g adds a
# runtime probe that surfaces `BackendUnavailable` with a clean
# install-WinFsp reason when the driver is missing.
default = []
fuse = ["dep:fuser"]
winfsp = ["dep:winfsp_wrs", "dep:widestring", "dep:tokio"]

[dependencies]
# History + chunk-store references feed the virtual tree. The mount
# crate consumes read-only — it never opens the DBs itself, the Tauri
# runner passes live handles in.
copythat-history = { path = "../copythat-history", version = "1" }
copythat-chunk = { path = "../copythat-chunk", version = "1" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Path sanitisation on mount roots reuses the same traversal guard
# the engine's `safety::validate_path_no_traversal` enforces.
copythat-core = { path = "../copythat-core", version = "1" }

# Phase 33c — `fuser` is the actively-maintained Rust FUSE binding.
# MIT. Target-gated so a `cargo build --features fuse` on Windows
# simply skips it instead of failing at link time — the FuseBackend
# stub falls through to `MountError::BackendUnavailable` on non-
# Unix hosts.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
fuser = { version = "0.15", optional = true }

# Phase 33f — `winfsp_wrs` is Scille's MIT-licensed WinFsp binding
# (replaces the GPL-blocked `winfsp-sys`). Target-gated to Windows;
# non-Windows builds with `--features winfsp` simply skip this dep
# and the `WinFspBackend` mount path surfaces `BackendUnavailable`.
# `widestring` + `tokio` come along for Phase 33i's real
# FileSystemInterface implementation (wide-string conversions +
# history DB block_on from the sync WinFsp callback thread).
[target.'cfg(target_os = "windows")'.dependencies]
winfsp_wrs = { version = "0.4", optional = true }
widestring = { version = "1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "phase_33_mount"
path = "../../tests/smoke/phase_33_mount.rs"

[[test]]
name = "phase_33h_mount"
path = "../../tests/smoke/phase_33h_mount.rs"
