[package]
name = "copythat-platform"
description = "OS-specific fast paths (CopyFileExW / copyfile / copy_file_range / reflink) and shell hooks for Copy That v1.25.0."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
# This crate is the *only* place in the workspace where `unsafe` is
# legal: every fast path we wrap (CopyFileExW / copyfile / copy_file_range
# / sendfile) is a raw FFI call. The workspace lint is `warn`; we relax to
# `allow` here so the platform syscalls don't pollute clippy output.
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }

[features]
default = []
# Heavy integration tests (4 GB reflink timing assertion, 2 GB sparse
# round-trip). Off by default; CI Linux/Btrfs runner opts in.
slow-tests = []
# Phase 42 — experimental compio-based overlapped path. Off by
# default; the hand-rolled IOCP loop in `windows_overlapped.rs`
# remains the shipping default until A/B benches confirm the
# compio runtime is at parity. See `compio_overlapped.rs` for the
# migration plan.
compio-experimental = ["dep:compio"]

[dependencies]
copythat-core = { path = "../copythat-core", version = "1" }
reflink-copy = "0.1"
thiserror = "2"
# Phase 38 — dedup options + outcome types are TOML-persistable and
# IPC-serialized, so serde + serde_json land in the dep graph here.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
# Phase 42 — optional compio runtime. Provides genuine async file
# I/O via IOCP on Windows and io_uring on Linux. Gated behind the
# `compio-experimental` feature; default builds do not pull it in
# so the dep graph and binary size stay unchanged for the shipping
# release.
compio = { version = "0.13", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
# Phase 24 — extended-attribute capture/apply for Linux + macOS.
# `xattr` 1.x is MIT/Apache-2.0 dual-licensed and re-uses libc for the
# underlying `getxattr` / `setxattr` / `listxattr` calls.
xattr = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    # Phase 37 follow-up #2 — `SetThreadExecutionState` for the
    # mobile companion's "Keep desktop awake" toggle.
    "Win32_System_Power",
    # Phase 31b — `SHQueryUserNotificationState` for the
    # presentation / fullscreen probe.
    "Win32_UI_Shell",
    # Phase 38 follow-up — overlapped I/O fast path
    # (`windows_overlapped.rs`): VirtualAlloc / VirtualFree for
    # sector-aligned ring-buffer allocation; INFINITE waits;
    # SECURITY_ATTRIBUTES for CreateFileW (it accepts a pointer
    # but we always pass null).
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    # Phase 42 — OS-version probe (RtlGetVersion via ntdll), free-RAM
    # adaptive NO_BUFFERING threshold (GlobalMemoryStatusEx), and
    # storage-topology probe (IOCTL_STORAGE_QUERY_PROPERTY).
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Ioctl",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# Phase 37 follow-up #2 — IOPMAssertionCreateWithName for the
# mobile companion's "Keep desktop awake" toggle. MIT/Apache-2.0.
core-foundation-sys = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
# Phase 37 follow-up #2 — `org.freedesktop.ScreenSaver.Inhibit` for
# the mobile companion's "Keep desktop awake" toggle. Pure-Rust
# dbus client. MIT. `blocking-api` is gated as a separate feature
# in zbus 5.x; the wake-lock backend uses `zbus::blocking::*`.
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }

[dev-dependencies]
blake3 = "1"
tempfile = "3"
serde_json = "1"
# Phase 42 — integration smoke needs the streaming verifier factory
# (`HashAlgorithm::XxHash3_128.verifier()`) for scenario 4. dev-only so
# the platform crate's runtime dep graph stays untouched.
copythat-hash = { path = "../copythat-hash", version = "1" }
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "test-util",
    "time",
] }

# Phase 6 smoke test lives at the workspace root.
[[test]]
name = "phase_06_fast_paths"
path = "../../tests/smoke/phase_06_fast_paths.rs"

# Phase 23 smoke test lives at the workspace root.
[[test]]
name = "phase_23_sparse"
path = "../../tests/smoke/phase_23_sparse.rs"

# Phase 24 smoke test lives at the workspace root.
[[test]]
name = "phase_24_meta"
path = "../../tests/smoke/phase_24_meta.rs"

# Phase 38 smoke test — destination dedup ladder.
[[test]]
name = "phase_38_dedup"
path = "../../tests/smoke/phase_38_dedup.rs"

# Phase 13c — parallel multi-chunk copy gating tripwire. Asserts
# the env-var-gated path stays opt-in (single-stream wins on every
# measured topology), the min-file-size threshold + default chunk
# count haven't drifted, and the regression conclusions are
# documented in COMPETITOR-TEST.md.
[[test]]
name = "phase_13c_parallel"
path = "../../tests/smoke/phase_13c_parallel.rs"

# Phase 42 — combined-paths integration smoke: sparse + CopyFile2,
# UNC dest, cross-volume auto-overlapped, paranoid verify, and
# sharing-violation retry under a simulated lock. Each scenario
# skips with a `println!` when its prerequisites aren't met so the
# suite stays runnable on any host.
[[test]]
name = "phase_42_integration"
path = "../../tests/smoke/phase_42_integration.rs"
